--- a/aboutus.html
+++ b/aboutus.html
@@ -74,7 +74,7 @@
       <div class="navdiv">
         <div class="logo"><img src="logo.jfif" width="200"></div>
         <ul>
-          <li><a href="home.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="aboutus.html" class="active">About Us</a></li>
           <li><a href="#solution">Solution</a></li>
           <li><a href="#Donate">Donate</a></li>
@@ -115,4 +115,5 @@
         <li class = "social"><a class = "social" href="https://www.tiktok.com/@courtezzyx">TikTok</a></li>
     </ul>
 </body>
+
 </html>
